# papra-llm-manager

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
examples/: advanced_workflows.py  basic_usage.py
papra_llm_manager/: __init__.py  cli.py  client.py  config.py  exceptions.py  llm_handler.py  logger.py  models.py  processors.py  services.py  tagger.py
papra_llm_manager/prompts/: __init__.py  extract_metadata.txt  extract_text.txt  generate_tags.txt
tests/: __init__.py  conftest.py  test_models.py  test_services.py
